# Property

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
asset-service/: pyproject.toml
asset-service/alembic/: env.py
asset-service/app/: main.py
asset-service/app/core/: config.py
asset-service/app/models/: asset.py
auth-service/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
auth-service/alembic/: env.py
auth-service/alembic/versions/: 68913557e7ec_init_user_session_table.py
auth-service/app/: config.py  db.py  main.py  models.py
auth-service/app/api/v1/routers/: auth.py  health.py
auth-service/app/core/: config.py  security.py
auth-service/app/db/: session.py
auth-service/app/db/models/: user.py
auth-service/app/models/: user.py
auth-service/app/redis/: client.py
auth-service/app/schema/: user.py
auth-service/app/utils/: auth.py  password.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: auth.ts
frontend/src/pages/: AssetCompare.tsx  LoginModal.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: Assest.ts
property_track/: Dockerfile
property_track/app/: main.py
property_track/app/api/: __init__.py  asset.py  benchmark.py  routes.py
